--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,13 @@
+/**-------------Header-------------**/
+
 .topbar__bg--color {
     background-color: #af95be !important;
+    position: relative !important;
+}
+
+.disable-fixed{
+    position: relative !important;
+    top: 0 !important;
 }
 
 .topbar__flag{
@@ -24,9 +32,7 @@ header .navbar-brand {
     padding: 10px 0;
 }
 
-.slider__mt{
-    margin-top: 126px !important;
-}
+/**-------------Footer-------------**/
 
 footer .footer-logo img {
     max-height: 70%;
@@ -35,6 +41,28 @@ footer .footer-logo img {
 .footer__icons--gap {
     display: flex;
     gap: 10px;
+}
+
+/**-------------Pages-Title-------------**/
+
+.pages__title{
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+    background-color: #2c305c;
+}
+
+.pages__title--fs{
+    margin-bottom: 0;
+    color: #fff;
+    font-size: 2.4rem;
+    font-weight: 700;
+}
+
+/**-------------Home-------------**/
+
+.slider__mt{
+    margin-top: 126px !important;
 }
 
 .pages__img{
