--- a/css/custom.css
+++ b/css/custom.css
@@ -1,111 +1,141 @@
 /**-------------Header-------------**/
 
 .topbar__bg--color {
-    background-color: #af95be !important;
-    position: relative !important;
+  background-color: #af95be !important;
+  position: relative !important;
 }
 
-.disable-fixed{
-    position: relative !important;
-    top: 0 !important;
+.disable-fixed {
+  position: relative !important;
+  top: 0 !important;
 }
 
-.topbar__flag{
-    display: flex;
-    justify-content: end;
+.topbar__flag {
+  display: flex;
+  justify-content: end;
 }
 
 header .navbar-brand img {
-    max-height: 50px !important;
+  max-height: 50px !important;
 }
 
 header .navbar-brand {
-    margin-right: 0;
-    vertical-align: middle;
-    padding: 15px 0;
-    display: inline-block;
-    font-size: 0;
+  margin-right: 0;
+  vertical-align: middle;
+  padding: 15px 0;
+  display: inline-block;
+  font-size: 0;
 }
 
 .navbar .navbar-nav .simple-dropdown .dropdown-menu {
-    width: 240px;
-    padding: 10px 0;
+  width: 240px;
+  padding: 10px 0;
+}
+
+.mobile__menu--flag {
+  display: none;
 }
 
 /**-------------Footer-------------**/
 
 footer .footer-logo img {
-    max-height: 70%;
+  max-height: 70%;
 }
 
 .footer__icons--gap {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 /**-------------Pages-Title-------------**/
 
-.pages__title{
-    padding: 50px;
-    display: flex;
-    justify-content: center;
-    background-color: #2c305c;
+.pages__title {
+  padding: 50px;
+  display: flex;
+  justify-content: center;
+  background-color: #2c305c;
 }
 
-.pages__title--fs{
-    margin-bottom: 0;
-    color: #fff;
-    font-size: 2.4rem;
-    font-weight: 700;
+.pages__title--fs {
+  margin-bottom: 0;
+  color: #fff;
+  font-size: 2.4rem;
+  font-weight: 700;
 }
 
 /**-------------Home-------------**/
 
-.slider__mt{
-    margin-top: 126px !important;
+.slider__mt {
+  margin-top: 0px !important;
 }
 
-.pages__img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 0;
+.pages__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 0;
 }
 
 /**-----------Home-----------**/
 
-.full__bg--pd{
-    padding-top: 150px;
-    padding-bottom: 150px;
+.full__bg--pd {
+  padding-top: 150px;
+  padding-bottom: 150px;
 }
 
-.full__bg--card{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
+.full__bg--card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
 
-.full__bg--card--font{
-    color: #888e95;
-    font-weight: bold;
+.full__bg--card--font {
+  color: #888e95;
+  font-weight: bold;
 }
 
 .bg-whit {
-    border-radius: 50px;
+  border-radius: 50px;
 }
 
 .bg-transparent {
-    --bs-bg-opacity: 1;
-    background-color: #ffffff !important;
+  --bs-bg-opacity: 1;
+  background-color: #ffffff !important;
 }
 
-.card__bg-rd{
-    border-radius: 50px;
+.card__bg-rd {
+  border-radius: 50px;
 }
+
+/**-----------responsive-----------**/
 
 @media (min-width: 1400px) {
-    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-        max-width: 1420px;
-    }
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl,
+  .container-xxl {
+    max-width: 1420px;
+  }
+}
+
+@media (max-width: 767px) {
+  .mobile__menu--flag {
+    display: block !important;
+    padding: 0px 15px;
+  }
+
+  .mobile__flag--df {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+  }
+
+  .mobile__flag--fs {
+    margin-bottom: 0;
+    color: #000;
+  }
+
 }
