--- a/css/custom.css
+++ b/css/custom.css
@@ -138,4 +138,10 @@ footer .footer-logo img {
     color: #000;
   }
 
+  .mobile__footer--pages{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
 }
