--- a/css/custom.css
+++ b/css/custom.css
@@ -121,10 +121,14 @@ footer .footer-logo img {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .mobile__menu--flag {
     display: block !important;
     padding: 0px 15px;
+  }
+
+  header .header-top-bar{
+    display: none;
   }
 
   .mobile__flag--df {
@@ -138,10 +142,13 @@ footer .footer-logo img {
     color: #000;
   }
 
-  .mobile__footer--pages{
+  .mobile__footer--pages {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
+  footer .footer-logo img {
+    max-height: 100%;
+  }
 }
