--- a/css/custom.css
+++ b/css/custom.css
@@ -127,7 +127,7 @@ footer .footer-logo img {
     padding: 0px 15px;
   }
 
-  header .header-top-bar{
+  header .header-top-bar {
     display: none;
   }
 
@@ -150,5 +150,12 @@ footer .footer-logo img {
 
   footer .footer-logo img {
     max-height: 100%;
+  }
+}
+
+
+@media (max-width: 430px) {
+  .sm-h-300px {
+    height: 255px !important;
   }
 }
